# teamdeck-api-client-rs

./: .gitignore  Cargo.toml  cspell.json
src/: api.rs  lib.rs  teamdeck.rs
src/api/: client.rs  endpoint.rs  error.rs  header.rs  ignore.rs  paged.rs  params.rs  query.rs  resources.rs  sort.rs  sort_by.rs
src/api/booking/: booking.rs  bookings.rs  many.rs  mod.rs  single.rs
src/api/booking/tags/: booking_tags.rs  mod.rs
src/api/booking_tags/: booking_tag.rs  booking_tags.rs  mod.rs
src/api/holidays/: holiday.rs  holidays.rs  many.rs  mod.rs
src/api/projects/: mod.rs  project.rs  projects.rs  single.rs
src/api/resources/: many.rs  mod.rs  resource.rs  resources.rs  single.rs
src/api/time_entries/: create.rs  delete.rs  mod.rs  single.rs  time_entries.rs  time_entry.rs  update.rs
src/api/time_entries/tags/: time_entry_tags.rs
src/api/time_entry_tags/: mod.rs  time_entry_tag.rs
src/api/vacations/: many.rs  mod.rs  single.rs
src/api/vacations/periods/: many.rs  mod.rs  single.rs
src/api/vacations/reasons/: many.rs  mod.rs  single.rs
src/test/: client.rs  client_v2.rs  mod.rs
