[package]
name = "teamdeck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
bytes = "1.1.0"
chrono = "0.4.19"
derive_builder = "0.11.2"
futures-util = "0.3.24"
http = "0.2.7"

log = "0.4.17"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
url = "2.2.2"

[dev-dependencies]
httpmock = "0.6.7"
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
